--- a/Httpserver/css/styles.css
+++ b/Httpserver/css/styles.css
@@ -43,6 +43,14 @@ h4{
     left: 0;
 }
 
+
+#ClientArea{
+    width: 100%;
+    height: 600px; 
+    background-color: rgb(225, 236, 236);
+    left: 0;
+}
+
 #MQTTArea{
     width: 100%;
     height: 600px; 
